# rtsp_server

./: .gitignore  CMakeLists.txt  README.md
hydra/: src.hpp  version.hpp  zlib.hpp
hydra/_experimental/http/: icy_stream.hpp
hydra/_experimental/http/impl/: icy_stream.hpp
hydra/_experimental/test/: handler.hpp  immediate_executor.hpp  tcp.hpp
hydra/_experimental/test/impl/: error.ipp  fail_count.ipp  stream.hpp  stream.ipp
hydra/_experimental/unit_test/: dstream.hpp  main.ipp  reporter.hpp  runner.hpp  suite_list.hpp
hydra/core/: async_base.hpp  basic_stream.hpp  bind_handler.hpp  buffer_ref.hpp  buffer_traits.hpp  buffers_adaptor.hpp  buffers_cat.hpp  buffers_prefix.hpp  buffers_range.hpp  file.hpp  file_posix.hpp  flat_static_buffer.hpp  make_printable.hpp  ostream.hpp  rate_policy.hpp  read_size.hpp  saved_handler.hpp  static_buffer.hpp  stream_traits.hpp  string_param.hpp  string_type.hpp  tcp_stream.hpp
hydra/core/detail/: allocator.hpp  async_base.hpp  base64.hpp  base64.ipp  bind_continuation.hpp  buffer.hpp  buffers_ref.hpp  clamp.hpp  cpu_info.hpp  get_io_context.hpp  is_invocable.hpp  pcg.hpp  read.hpp  sha1.ipp  static_const.hpp  static_string.hpp  stream_traits.hpp  string.hpp  tuple.hpp  type_traits.hpp  win32_unicode_path.hpp
hydra/core/detail/impl/: read.hpp  temporary_buffer.ipp
hydra/core/impl/: buffered_read_stream.hpp  buffers_adaptor.hpp  buffers_cat.hpp  buffers_prefix.hpp  buffers_suffix.hpp  file_posix.ipp  flat_buffer.hpp  flat_stream.hpp  saved_handler.hpp  saved_handler.ipp  static_buffer.hpp  static_buffer.ipp  string_param.hpp
hydra/rtsp/: basic_dynamic_body.hpp  basic_parser.hpp  dynamic_body.hpp  field.hpp  message_generator.hpp  parser.hpp  rfc7230.hpp  serializer.hpp  span_body.hpp  status.hpp  verb.hpp
hydra/rtsp/detail/: basic_parsed_list.hpp  basic_parser.hpp  chunk_encode.hpp  rfc7230.hpp  rfc7230.ipp  type_traits.hpp
hydra/rtsp/impl/: basic_parser.ipp  chunk_encode.hpp  error.hpp  error.ipp  field.ipp  file_body_win32.hpp  message.hpp  message_generator.hpp  read.hpp  rfc7230.hpp  rfc7230.ipp  serializer.hpp  verb.ipp
hydra/zlib/: error.hpp  inflate_stream.hpp
hydra/zlib/detail/: bitstream.hpp  deflate_stream.ipp  ranges.hpp  window.hpp
hydra/zlib/impl/: error.ipp
include/handler/: RTSPSessionHandler.hpp  RTSPSessionHandlerLive.hpp
include/hydra/: core.hpp  rtsp.hpp  ssl.hpp
include/hydra/_experimental/test/: error.hpp  fail_count.hpp  stream.hpp
include/hydra/core/: buffered_read_stream.hpp  buffers_generator.hpp  buffers_suffix.hpp  buffers_to_string.hpp  detect_ssl.hpp  error.hpp  file_base.hpp  file_stdio.hpp  file_win32.hpp  flat_buffer.hpp  flat_stream.hpp  multi_buffer.hpp  role.hpp  span.hpp  static_string.hpp  string.hpp
include/hydra/rtsp/: basic_file_body.hpp  buffer_body.hpp  chunk_encode.hpp  empty_body.hpp  error.hpp  fields.hpp  file_body.hpp  message.hpp  read.hpp  string_body.hpp  type_traits.hpp  vector_body.hpp  write.hpp
include/hydra/ssl/: ssl_stream.hpp
include/hydra/zlib/: deflate_stream.hpp  zlib.hpp
include/server/: RTSPListener.hpp
include/session/: RTSPFileSession.hpp  RTSPSession.hpp
readme/: step_1.md  step_2.md
src/: CMakeLists.txt  main.cpp
src/handler/: RTSPSessionHandlerGstFile.cpp  RTSPSessionHandlerGstFileDescribe.cpp  RTSPSessionHandlerGstFileSetup.cpp
src/handler/gst_file/: RTSPSessionHandlerGstFile.cpp  RTSPSessionHandlerGstFileDescribe.cpp  RTSPSessionHandlerGstFileOption.cpp  RTSPSessionHandlerGstFilePause.cpp  RTSPSessionHandlerGstFilePlay.cpp  RTSPSessionHandlerGstFileSetup.cpp  RTSPSessionHandlerGstFileTeardown.cpp
src/handler/gst_live/: MulticastStream.cpp  MulticastStreamV4L2.cpp  MulticastStreamV4L2MakeSdp.cpp  MulticastStreamV4L2PlayStream.cpp  MulticastStreamV4L2SetStream.cpp  RTSPSessionHandlerGstLive.cpp
src/server/: RTSPListener.cpp
src/session/: RTSPFileSession.cpp  RTSPFileSessionGst.cpp  RTSPFileSessionGstDescribe.cpp  RTSPFileSessionGstOption.cpp  RTSPFileSessionGstPause.cpp  RTSPFileSessionGstPlay.cpp  RTSPFileSessionGstSetup.cpp  RTSPFileSessionGstTeardown.cpp  RTSPSession.cpp  RTSPSessionImpl.cpp
(+53 files in other folders)
